GNOME Bugzilla – Bug 776790
Fixed memory leak in gst module in usage of gst_pad_template_new() API
Last modified: 2017-01-03 10:04:56 UTC
Created attachment 342743 [details] [review] Fixed memory leak in gst module in usage of gst_pad_template_new() API The last argument to gst_pad_template_new() is not freed. Added gst_caps_unref() to free the allocated memory. Please review the attached patch.
Thanks, squashed this with the other patch: commit 81b0a14d692bb679c5688ef597e5aab6f0ce7730 Author: Garima Gaur <garima.g@samsung.com> Date: Tue Jan 3 09:02:36 2017 +0530 Fix some caps leaks in pad template creation code gst_pad_template_new() does not take ownership of the caps passed to it, so we need to unref the caps. https://bugzilla.gnome.org/show_bug.cgi?id=776790 https://bugzilla.gnome.org/show_bug.cgi?id=776787